--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,17 @@
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",alacritty:Tc"
+
+set -g base-index 1
+
+set -g mouse on
+
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
+set -g status-keys vi
+set -g history-limit 10000
+setw -g mode-keys vi
+setw -g monitor-activity on
+set -g visual-activity on
+set -g focus-events on
+
