--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",alacritty:Tc"
 
 set -g base-index 1
@@ -15,3 +15,52 @@ setw -g monitor-activity on
 set -g visual-activity on
 set -g focus-events on
 
+bind-key c new-window -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
+
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+bind x kill-pane
+
+# No delay for escape key press
+set -sg escape-time 0
+
+unbind -Tcopy-mode-vi Enter
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'V' send-keys -X select-line
+bind-key -T copy-mode-vi 'r' send-keys -X rectangle-toggle
+bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "wl-copy --primary"
+
+# Reload tmux config
+bind r source-file ~/.tmux.conf
