--- a/.config/i3/config
+++ b/.config/i3/config
@@ -197,17 +197,19 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        font pango:Hack, FontAwesome 12
-        position top
-        status_command i3status-rs $HOME/.config/i3/status.toml
-        colors {
-                separator #666666
-                background #222222
-                statusline #dddddd
-                focused_workspace #0088CC #0088CC #ffffff
-                active_workspace #333333 #333333 #ffffff
-                inactive_workspace #333333 #333333 #888888
-                urgent_workspace #2f343a #900000 #ffffff
-        }
-}
+#bar {
+#        font pango:Hack, FontAwesome 12
+#        position top
+#        status_command i3status-rs $HOME/.config/i3/status.toml
+#        colors {
+#                separator #666666
+#                background #222222
+#                statusline #dddddd
+#                focused_workspace #0088CC #0088CC #ffffff
+#                active_workspace #333333 #333333 #ffffff
+#                inactive_workspace #333333 #333333 #888888
+#                urgent_workspace #2f343a #900000 #ffffff
+#        }
+#}
+
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
