--- a/.config/i3/config
+++ b/.config/i3/config
@@ -160,6 +160,7 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 assign [class="Google-chrome"]          number 2
+assign [class="Emacs"]                  number 3
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
