--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,33 @@
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",alacritty:Tc"
+set -g @plugin 'tmux-plugin/tpm'
+set -g @plugin 'arcticicestudio/nord-tmux'
 
-set -g base-index 1
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set -g @themepack 'powerline/double/blue'
 
 set -g mouse on
 
+set -g base-index 1
+set -g pane-base-index 1
+
+# for nord-tmux theme
+set-window-option -ga window-status-activity-style none
+
 set-window-option -g automatic-rename on
+set-option -g renumber-windows on
 set-option -g set-titles on
+
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",alacritty:Tc"
+set -ga terminal-overrides ",*256col*:Tc"
+set-option -g default-shell $SHELL
 
 set -g status-keys vi
 set -g history-limit 10000
 setw -g mode-keys vi
 setw -g monitor-activity on
-set -g visual-activity on
+set -g visual-activity off
 set -g focus-events on
 
 bind-key c new-window -c "#{pane_current_path}"
@@ -64,3 +79,5 @@ bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -in -selection
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
+
+run "~/.tmux/plugins/tpm/tpm"
