Changed default fonts

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,11 +2,58 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
 	<!-- settings go here -->
+	<match>
+		<edit mode="prepend" name="family">
+			<string>SF Pro</string>
+		</edit>
+	</match>
+
+	<match>
+		<test compare="contains" name="lang">
+			<string>ko</string>
+		</test>
+		<edit mode="prepend" name="family">
+			<string>Apple SD Gothic Neo</string>
+		</edit>
+	</match>
+
+	<match target="pattern">
+		<test qual="any" name="family"><string>serif</string></test>
+		<edit name="family" mode="prepend" binding="same"><string>New York</string></edit>
+		<edit name="family" mode="append" binding="same"><string>Apple Myungjo</string></edit>
+	</match>
+
+	<match target="pattern">
+		<test qual="any" name="family"><string>monospace</string></test>
+		<edit name="family" mode="prepend" binding="same"><string>Hack</string></edit>
+		<edit name="family" mode="append" binding="same"><string>D2Coding</string></edit>
+	</match>
+
+	<alias>
+		<family>sans-serif</family>
+		<prefer>
+			<family>Apple SD Gothic Neo</family>
+			<family>SF Pro</family>
+		</prefer>
+	</alias>
+	<alias>
+		<family>serif</family>
+		<prefer>
+			<family>New York</family>
+		</prefer>
+	</alias>
 	<alias>
 		<family>monospace</family>
 		<prefer>
 			<family>Hack</family>
 			<family>D2Coding</family>
+		</prefer>
+	</alias>
+	<alias>
+		<family>system-ui</family>
+		<prefer>
+			<family>Apple SD Gothic Neo</family>
+			<family>SF Pro</family>
 		</prefer>
 	</alias>
 </fontconfig>
