--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -3,57 +3,58 @@
 <fontconfig>
 	<!-- settings go here -->
 	<match>
-		<edit mode="prepend" name="family">
+		<edit mode="append" name="family">
 			<string>SF Pro</string>
 		</edit>
 	</match>
-
 	<match>
 		<test compare="contains" name="lang">
 			<string>ko</string>
 		</test>
-		<edit mode="prepend" name="family">
+		<edit mode="append" name="family">
 			<string>Apple SD Gothic Neo</string>
 		</edit>
 	</match>
 
-	<match target="pattern">
-		<test qual="any" name="family"><string>serif</string></test>
-		<edit name="family" mode="prepend" binding="same"><string>New York</string></edit>
-		<edit name="family" mode="append" binding="same"><string>Apple Myungjo</string></edit>
-	</match>
-
-	<match target="pattern">
-		<test qual="any" name="family"><string>monospace</string></test>
-		<edit name="family" mode="prepend" binding="same"><string>Hack</string></edit>
-		<edit name="family" mode="append" binding="same"><string>D2Coding</string></edit>
-	</match>
-
 	<alias>
-		<family>sans-serif</family>
+		<family>mono</family>
 		<prefer>
-			<family>Apple SD Gothic Neo</family>
-			<family>SF Pro</family>
+			<family>monospace</family>
 		</prefer>
 	</alias>
-	<alias>
+
+	<alias binding="strong">
+		<family>sans-serif</family>
+		<prefer>
+			<family>SF Pro</family>
+			<family>Apple SD Gothic Neo</family>
+		</prefer>
+	</alias>
+	<alias binding="strong">
+		<family>sans</family>
+		<prefer>
+			<family>SF Pro</family>
+			<family>Apple SD Gothic Neo</family>
+		</prefer>
+	</alias>
+	<alias binding="strong">
 		<family>serif</family>
 		<prefer>
 			<family>New York</family>
 		</prefer>
 	</alias>
-	<alias>
+	<alias binding="strong">
 		<family>monospace</family>
 		<prefer>
 			<family>Hack</family>
 			<family>D2Coding</family>
 		</prefer>
 	</alias>
-	<alias>
+	<alias binding="strong">
 		<family>system-ui</family>
 		<prefer>
-			<family>Apple SD Gothic Neo</family>
 			<family>SF Pro</family>
+			<family>Apple SD Gothic Neo</family>
 		</prefer>
 	</alias>
 </fontconfig>
